--- a/css/style-request.css
+++ b/css/style-request.css
@@ -271,3 +271,11 @@ footer {
 .nav-dropdown {
   display: none;
 }
+.request-form-section iframe {
+  width: 100% !important;
+  max-width: 100%;
+  min-width: 0;
+  border-radius: 1.2rem;
+  box-sizing: border-box;
+  display: block;
+}
