--- a/css/style-request.css
+++ b/css/style-request.css
@@ -278,4 +278,24 @@ footer {
   border-radius: 1.2rem;
   box-sizing: border-box;
   display: block;
+  height: 1393px !important;
+}
+@media (max-width: 700px) {
+  .request-form-section {
+    padding: 0.5rem 0.2rem 0.5rem 0.2rem;
+    margin: 0 auto 1.2rem auto;
+    border-radius: 0.8rem;
+    max-width: 100vw;
+    box-sizing: border-box;
+  }
+  .request-form-section iframe {
+    width: 100vw !important;
+    max-width: 100vw;
+    min-width: 0;
+    border-radius: 0.8rem;
+    margin: 0;
+    height: 800px !important;
+    box-sizing: border-box;
+    display: block;
+  }
 }
