--- a/css/style-contact.css
+++ b/css/style-contact.css
@@ -291,6 +291,10 @@ footer {
     background-position: right 1.1em center;
     background-size: 1.2em;
   }
+  .nav-dropdown {
+    margin: 0.5em auto !important;
+    float: none;
+  }
 }
 .logo-text {
   font-family: 'Orbitron', 'Montserrat', sans-serif;
